--- a/locales/lus.json
+++ b/locales/lus.json
@@ -7,7 +7,7 @@
     "keyCopied": "Copied",
     "copyAllKeysButton": "Copy all keys",
     "allKeysCopied": "Copied",
-    "selectKeyCountLabel": "Select the number of keys to generate:",
-    "selectKeyCountLabel_selected": "The selected number of keys to generate: ",
-    "selectGameLabel": "Select the game to generate the keys:"
+    "selectKeyCountLabel": "I generate duh zat thlang leh rawh",
+    "selectKeyCountLabel_selected": "Generate tur zat",
+    "selectGameLabel": "I game duh thlang rawh"
 }
