--- a/locales/en.json
+++ b/locales/en.json
@@ -1,12 +1,12 @@
 {
     "title": "Hamster Kombat Key Generator",
-    "generateButton": "Generate Keys",
-    "generatedKeysTitle": "Generated Keys:",
-    "footerButton": "Powered by Project PDoSI",
-    "copyKeyButton": "Copy Key",
-    "keyCopied": "Key Copied",
-    "copyAllKeysButton": "Copy All Keys",
-    "allKeysCopied": "All Keys Copied",
+    "generateButton": "Generate",
+    "generatedKeysTitle": "Generated key(s):",
+    "footerButton": "Made by RSR",
+    "copyKeyButton": "Copy",
+    "keyCopied": "Copied",
+    "copyAllKeysButton": "Copy all keys",
+    "allKeysCopied": "Copied",
     "selectKeyCountLabel": "Select the number of keys to generate:",
     "selectKeyCountLabel_selected": "The selected number of keys to generate: ",
     "selectGameLabel": "Select the game to generate the keys:"
