--- a/locales/lus.json
+++ b/locales/lus.json
@@ -1,12 +1,12 @@
 {
     "title": "Hamster Kombat Key Generator",
     "generateButton": "Generate",
-    "generatedKeysTitle": "Generated key(s):",
+    "generatedKeysTitle": "Generate chhuah:",
     "footerButton": "Made by RSR",
     "copyKeyButton": "Copy",
-    "keyCopied": "Copied",
-    "copyAllKeysButton": "Copy all keys",
-    "allKeysCopied": "Copied",
+    "keyCopied": "Copy a ni e",
+    "copyAllKeysButton": "Copy vekna",
+    "allKeysCopied": "Copy vek a ni e",
     "selectKeyCountLabel": "I generate duh zat thlang leh rawh:",
     "selectKeyCountLabel_selected": "Generate tur zat: ",
     "selectGameLabel": "I game duh thlang rawh:"
